words + css "hack" to avoid fractional pixels on firefox big displays

--- a/css/styles.css
+++ b/css/styles.css
@@ -619,6 +619,7 @@ RESPONSIVE */
   }
   .blabla section {
     padding: 0 30px;
+    max-width: 463px;
   }
 }
 #grid {
